--- a/scss/style.css
+++ b/scss/style.css
@@ -591,7 +591,8 @@ main .sec-15 {
   height: 270px;
   overflow-y: hidden;
   padding: 20px;
-  margin-bottom: 40px;
+  padding-bottom: 70px;
+  margin-bottom: 70px !important;
   cursor: pointer;
 }
 @media (max-width: 1300px) {
@@ -614,11 +615,11 @@ main .sec-15 p {
 main .sec-15 .btn-show-bottom {
   position: absolute;
   bottom: 0;
-  right: 50%;
-  width: 40px;
+  right: 0;
+  width: 100%;
   height: 35px;
   border: none;
-  background-color: transparent;
+  background-color: #fff;
 }
 main .sec-15 .btn-show-bottom i {
   font-size: 20px;
