--- a/scss/style.scss
+++ b/scss/style.scss
@@ -565,7 +565,8 @@ main {
     height: 270px;
     overflow-y: hidden;
     padding: 20px;
-    margin-bottom: 40px;
+    padding-bottom: 70px;
+    margin-bottom: 70px !important;
     cursor: pointer;
     @media (max-width: 1300px) {
       width: calc(100% - 40px);
@@ -583,11 +584,14 @@ main {
     .btn-show-bottom {
       position: absolute;
       bottom: 0;
-      right: 50%;
-      width: 40px;
+      right: 0;
+      width: 100%;
       height: 35px;
       border: none;
-      background-color: transparent;
+      background-color: #fff;
+      @media (max-width:576px) {
+        // bottom: -40px;
+      }
       i {
         font-size: 20px;
         color: #636668;
